src/main/java/com/example/springboot/error/Spring/Error/exceptions/UserNotFoundException.java
package com.example.springboot.error.Spring.Error.exceptions;

public class UserNotFoundException extends RuntimeException{

    public UserNotFoundException(String message) {
        super(message);
    }
}
